--- a/index.html
+++ b/index.html
@@ -6,33 +6,33 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>座席表(空席:緑 , 在籍:赤 , お直し:黄)</h1>
+    <h1>座席表</h1>
     <div class="seat-container">
-        <button class="seat empty" data-status="empty" id="table1">テーブル1</button>
-        <button class="seat empty" data-status="empty" id="table2">テーブル2</button>
-        <button class="seat empty" data-status="empty" id="table3">テーブル3</button>
-        <button class="seat empty" data-status="empty" id="table4">テーブル4</button>
-        <button class="seat empty" data-status="empty" id="table5">テーブル5</button>
-        <button class="seat empty" data-status="empty" id="table6">テーブル6</button>
-        <button class="seat empty" data-status="empty" id="table7">テーブル7</button>
-        <button class="seat empty" data-status="empty" id="table8">テーブル8</button>
-        <button class="seat empty" data-status="empty" id="table9">テーブル9</button>
-        <button class="seat empty" data-status="empty" id="table10">テーブル10</button>
-        <button class="seat empty" data-status="empty" id="table11">テーブル11</button>
-        <button class="seat empty" data-status="empty" id="table12">テーブル12</button>
-        <button class="seat empty" data-status="empty" id="table13">テーブル13</button>
-        <button class="seat empty" data-status="empty" id="table14">テーブル14</button>
-        <button class="seat empty" data-status="empty" id="table15">テーブル15</button>
-        <button class="seat empty" data-status="empty" id="table16">テーブル16</button>
-        <button class="seat empty" data-status="empty" id="table17">テーブル17</button>
-        <button class="seat empty" data-status="empty" id="table18">テーブル18</button>
-        <button class="seat empty" data-status="empty" id="table19">テーブル19</button>
-        <button class="seat empty" data-status="empty" id="table20">テーブル20</button>
-        <button class="seat empty" data-status="empty" id="table21">テーブル21</button>
-        <button class="seat empty" data-status="empty" id="table22">テーブル22</button>
-        <button class="seat empty" data-status="empty" id="table23">テーブル23</button>
-        <button class="seat empty" data-status="empty" id="table24">テーブル24</button>
-        <button class="seat empty" data-status="empty" id="table25">テーブル25</button>
+        <button class="seat empty" data-status="empty" id="table1">1</button>
+        <button class="seat empty" data-status="empty" id="table2">2</button>
+        <button class="seat empty" data-status="empty" id="table3">3</button>
+        <button class="seat empty" data-status="empty" id="table4">4</button>
+        <button class="seat empty" data-status="empty" id="table5">5</button>
+        <button class="seat empty" data-status="empty" id="table6">6</button>
+        <button class="seat empty" data-status="empty" id="table7">7</button>
+        <button class="seat empty" data-status="empty" id="table8">8</button>
+        <button class="seat empty" data-status="empty" id="table9">9</button>
+        <button class="seat empty" data-status="empty" id="table10">10</button>
+        <button class="seat empty" data-status="empty" id="table11">11</button>
+        <button class="seat empty" data-status="empty" id="table12">12</button>
+        <button class="seat empty" data-status="empty" id="table13">13</button>
+        <button class="seat empty" data-status="empty" id="table14">14</button>
+        <button class="seat empty" data-status="empty" id="table15">15</button>
+        <button class="seat empty" data-status="empty" id="table16">16</button>
+        <button class="seat empty" data-status="empty" id="table17">17</button>
+        <button class="seat empty" data-status="empty" id="table18">18</button>
+        <button class="seat empty" data-status="empty" id="table19">19</button>
+        <button class="seat empty" data-status="empty" id="table20">20</button>
+        <button class="seat empty" data-status="empty" id="table21">21</button>
+        <button class="seat empty" data-status="empty" id="table22">22</button>
+        <button class="seat empty" data-status="empty" id="table23">23</button>
+        <button class="seat empty" data-status="empty" id="table24">24</button>
+        <button class="seat empty" data-status="empty" id="table25">25</button>
     </div>
     <script src="script.js"></script>
 </body>
