--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>座席表 (空席:緑 , 在籍:赤 , お直し:黄) </title>
+    <title>座席表(空席:緑 , 在籍:赤 , お直し:黄)</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>座席表</h1>
+    <h1>座席表(空席:緑 , 在籍:赤 , お直し:黄)</h1>
     <div class="seat-container">
         <button class="seat empty" data-status="empty" id="table1">1</button>
         <button class="seat empty" data-status="empty" id="table2">2</button>
